[package]
name = "nf2pq"
version = "0.2.3"
edition = "2021"

[dependencies]
arrow = "53.3.0"
chrono = "0.4.38"
clap = { version = "4.5.21", features = ["derive"] }
configparser = { version = "3.1.0", features = ["indexmap"] }
crossbeam = "0.8"
netflow_parser = { git="https://github.com/poorting/netflow_parser.git" }
parquet = "53.3.0"
serde = "1.0.215"
signal-hook = "0.3.17"
tracing = { version = "0.1.40", features = ["attributes"] }
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.18"
